# soser

./: .clang  .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  conanprofile.txt  main.cpp
benchmark/: BMLargeSerialization.cpp  BMSmallDeserialization.cpp  BMSmallSerialization.cpp  CMakeLists.txt
include/: sopack.hpp  sopacker.hpp
include/soser/: detail.hpp  file_utils.hpp  soser.hpp  splitting_utils.hpp
lib/: CMakeLists.txt
lib/inc/: detail.hpp  file_utils.hpp  sopack.hpp  splitting_utils.hpp
lib/src/: splitting_utils.cpp
test/: CMakeLists.txt  base.cpp
test/benchmark/: BMSerialization.cpp  CMakeLists.txt
test/core/: base.cpp  container_support.cpp  deserialization.cpp
test/utils/: splitters.cpp
